--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -39,9 +39,9 @@
 /dolphinscheduler-tools/ @caishunfeng @SbloodyS @zhongjiajie @EricGao888
 /script/ @caishunfeng @SbloodyS @zhongjiajie @EricGao888
 /dolphinscheduler-ui/ @songjianet @Amy0104
-/docs/ @zhongjiajie @Tianqi-Dotes @EricGao888
+/docs/ @zhongjiajie @EricGao888
 /licenses/ @kezhenxu94 @zhongjiajie
-/images/ @zhongjiajie @Tianqi-Dotes @EricGao888
+/images/ @zhongjiajie @EricGao888
 /style/ @caishunfeng
 
 # All pom files
