--- a/dolphinscheduler-datasource-plugin/dolphinscheduler-datasource-all/pom.xml
+++ b/dolphinscheduler-datasource-plugin/dolphinscheduler-datasource-all/pom.xml
@@ -112,5 +112,10 @@
             <artifactId>dolphinscheduler-datasource-ssh</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.dolphinscheduler</groupId>
+            <artifactId>dolphinscheduler-datasource-teradata</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 </project>
