--- a/dolphinscheduler-api-test/dolphinscheduler-api-test-case/pom.xml
+++ b/dolphinscheduler-api-test/dolphinscheduler-api-test-case/pom.xml
@@ -42,5 +42,11 @@
             <version>dev-SNAPSHOT</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.dolphinscheduler</groupId>
+            <artifactId>dolphinscheduler-api</artifactId>
+            <version>dev-SNAPSHOT</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
