--- a/dolphinscheduler-bom/pom.xml
+++ b/dolphinscheduler-bom/pom.xml
@@ -107,6 +107,7 @@
         <azure-resourcemanager-datafactory.version>1.0.0-beta.19</azure-resourcemanager-datafactory.version>
         <google-cloud-storage.version>2.18.0</google-cloud-storage.version>
         <sshd.version>2.8.0</sshd.version>
+        <fabric8.client.version>6.0.0</fabric8.client.version>
     </properties>
 
     <dependencyManagement>
@@ -840,6 +841,11 @@
                 <artifactId>aws-java-sdk-redshift</artifactId>
                 <version>${aws-java-sdk-redshift.version}</version>
                 <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>io.fabric8</groupId>
+                <artifactId>kubernetes-client</artifactId>
+                <version>${fabric8.client.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
