[Feature][plugin] Support Kyuubi datasource (#13642)
---------

Co-authored-by: weitong <weitong@cisco.com>
Co-authored-by: Rick Cheng <38122586+rickchengx@users.noreply.github.com>

--- a/dolphinscheduler-datasource-plugin/pom.xml
+++ b/dolphinscheduler-datasource-plugin/pom.xml
@@ -42,6 +42,7 @@
         <module>dolphinscheduler-datasource-all</module>
         <module>dolphinscheduler-datasource-redshift</module>
         <module>dolphinscheduler-datasource-athena</module>
+        <module>dolphinscheduler-datasource-kyuubi</module>
         <module>dolphinscheduler-datasource-trino</module>
         <module>dolphinscheduler-datasource-starrocks</module>
         <module>dolphinscheduler-datasource-azure-sql</module>
