--- a/dolphinscheduler-common/src/main/resources/common.properties
+++ b/dolphinscheduler-common/src/main/resources/common.properties
@@ -178,3 +178,9 @@ remote.logging.google.cloud.storage.credential=/path/to/credential
 # gcs bucket name, required if you set remote.logging.target=GCS
 remote.logging.google.cloud.storage.bucket.name=<your-bucket>
 
+# datax on yarn jar path https://github.com/duhanmin/datax-on-yarn
+datax.yarn.jar=
+# datax does not require that much memory, and configuration globally may affect the hadoop/spark/flink process
+datax.yarn.bin=HADOOP_OPTS="-Xms32m -Xmx128m" /usr/bin/yarn
+# specifies that datax runs queues on yarn,the front-end configuration has the highest priority
+datax.yarn.default.queue=default
