--- a/.asf.yaml
+++ b/.asf.yaml
@@ -16,7 +16,7 @@
 #
 
 github:
-  description: Apache DolphinScheduler is the modern data workflow orchestration platform with powerful user interface, dedicated to solving complex task dependencies in the data pipeline and providing various types of jobs available `out of the box`
+  description: Apache DolphinScheduler is the modern data orchestration platform. Agile to create high performance workflow with low-code
   homepage: https://dolphinscheduler.apache.org/
   labels:
     - cloud-native
