--- a/dolphinscheduler-bom/pom.xml
+++ b/dolphinscheduler-bom/pom.xml
@@ -88,7 +88,10 @@
         <aws-sdk.version>1.12.160</aws-sdk.version>
         <joda-time.version>2.10.13</joda-time.version>
         <gson.version>2.9.1</gson.version>
-
+        <snakeyaml.version>1.28</snakeyaml.version>
+        <datasync.version>2.17.282</datasync.version>
+        <spring-ldap.version>2.4.1</spring-ldap.version>
+        <spark.version>2.4.0</spark.version>
     </properties>
 
     <dependencyManagement>
