Restore changes for testing

--- a/dolphinscheduler-common/src/main/resources/common.properties
+++ b/dolphinscheduler-common/src/main/resources/common.properties
@@ -26,7 +26,7 @@ data.basedir.path=/tmp/dolphinscheduler
 # use shared file mount point
 resource.storage.type=LOCAL
 # resource store on HDFS/S3 path, resource file will store to this base path, self configuration, please make sure the directory exists on hdfs and have read write permissions. "/dolphinscheduler" is recommended
-resource.storage.upload.base.path=/Users/alibaba/workplace/data/dolphinscheduler
+resource.storage.upload.base.path=/dolphinscheduler
 
 # The Azure client ID (Azure Application (client) ID)
 resource.azure.client.id=minioadmin
