完善各模块的pom.xml中的name信息为具体的模块对应名称便于源码maven结构查看

--- a/dolphinscheduler-api/pom.xml
+++ b/dolphinscheduler-api/pom.xml
@@ -24,7 +24,7 @@
         <version>3.0.1-SNAPSHOT</version>
     </parent>
     <artifactId>dolphinscheduler-api</artifactId>
-    <name>${project.artifactId}</name>
+    <name>dolphinscheduler-api</name>
     <packaging>jar</packaging>
 
     <dependencies>
