--- a/dolphinscheduler-alert/dolphinscheduler-alert-server/pom.xml
+++ b/dolphinscheduler-alert/dolphinscheduler-alert-server/pom.xml
@@ -24,7 +24,7 @@
         <version>3.0.1-SNAPSHOT</version>
     </parent>
     <artifactId>dolphinscheduler-alert-server</artifactId>
-    <name>${project.artifactId}</name>
+    <name>dolphinscheduler-alert-server</name>
     <packaging>jar</packaging>
 
     <dependencies>
