--- a/dolphinscheduler-dao/pom.xml
+++ b/dolphinscheduler-dao/pom.xml
@@ -24,7 +24,7 @@
         <version>3.0.1-SNAPSHOT</version>
     </parent>
     <artifactId>dolphinscheduler-dao</artifactId>
-    <name>${project.artifactId}</name>
+    <name>dolphinscheduler-dao</name>
 
     <dependencies>
         <!-- dolphinscheduler -->
