--- a/dolphinscheduler-dist/pom.xml
+++ b/dolphinscheduler-dist/pom.xml
@@ -25,7 +25,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>dolphinscheduler-dist</artifactId>
-    <name>${project.artifactId}</name>
+    <name>dolphinscheduler-dist</name>
     <properties>
         <maven.deploy.skip>true</maven.deploy.skip>
     </properties>
