--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
     <artifactId>dolphinscheduler</artifactId>
     <version>3.0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
-    <name>${project.artifactId}</name>
+    <name>dolphinscheduler</name>
     <url>https://dolphinscheduler.apache.org</url>
     <description>Dolphin Scheduler is a distributed and easy-to-expand visual DAG workflow scheduling system, dedicated
         to solving the complex dependencies in data processing, making the scheduling system out of the box for data
