Added numeric check on Teradata port number. Fixed id number in use-datasource.ts. Fixed lockfileVersion: to 5.4

--- a/dolphinscheduler-datasource-plugin/dolphinscheduler-datasource-teradata/pom.xml
+++ b/dolphinscheduler-datasource-plugin/dolphinscheduler-datasource-teradata/pom.xml
@@ -44,6 +44,7 @@
         <dependency>
             <groupId>com.teradata.jdbc</groupId>
             <artifactId>terajdbc</artifactId>
+            <version>20.00.00.06</version>
         </dependency>
     </dependencies>
 </project>
