[Fix-13480][Resource] When downloading a file, an error will occur when uploading the file

--- a/dolphinscheduler-common/src/main/resources/common.properties
+++ b/dolphinscheduler-common/src/main/resources/common.properties
@@ -123,3 +123,9 @@ task.resource.limit.state=false
 ml.mlflow.preset_repository=https://github.com/apache/dolphinscheduler-mlflow
 # mlflow task plugin preset repository version
 ml.mlflow.preset_repository_version="main"
+
+#use distributed zk lock
+resource.lock.switch=true
+
+# zk lock timeout  unit:MILLISECONDS
+resource.lock.timeout=10000
