--- a/dolphinscheduler-datasource-plugin/dolphinscheduler-datasource-postgresql/pom.xml
+++ b/dolphinscheduler-datasource-plugin/dolphinscheduler-datasource-postgresql/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <groupId>org.apache.dolphinscheduler</groupId>
         <artifactId>dolphinscheduler-datasource-plugin</artifactId>
-        <version>3.1.6-SNAPSHOT</version>
+        <version>3.1.6</version>
     </parent>
 
     <artifactId>dolphinscheduler-datasource-postgresql</artifactId>
