--- a/dolphinscheduler-task-plugin/dolphinscheduler-task-hivecli/pom.xml
+++ b/dolphinscheduler-task-plugin/dolphinscheduler-task-hivecli/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <groupId>org.apache.dolphinscheduler</groupId>
         <artifactId>dolphinscheduler-task-plugin</artifactId>
-        <version>3.1.6-SNAPSHOT</version>
+        <version>3.1.6</version>
     </parent>
 
     <artifactId>dolphinscheduler-task-hivecli</artifactId>
