--- a/.github/workflows/api-test.yml
+++ b/.github/workflows/api-test.yml
@@ -90,6 +90,8 @@ jobs:
         case:
           - name: Tenant
             class: org.apache.dolphinscheduler.api.test.cases.TenantAPITest
+          - name: WorkerGroup
+            class: org.apache.dolphinscheduler.api.test.cases.WorkerGroupAPITest
     env:
       RECORDING_PATH: /tmp/recording-${{ matrix.case.name }}
     steps:
