--- a/dolphinscheduler-api-test/dolphinscheduler-api-test-case/pom.xml
+++ b/dolphinscheduler-api-test/dolphinscheduler-api-test-case/pom.xml
@@ -41,10 +41,10 @@
             <artifactId>dolphinscheduler-dao</artifactId>
             <version>dev-SNAPSHOT</version>
         </dependency>
-        <dependency>
-            <groupId>org.apache.dolphinscheduler</groupId>
-            <artifactId>dolphinscheduler-api</artifactId>
-            <version>dev-SNAPSHOT</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.apache.dolphinscheduler</groupId>-->
+<!--            <artifactId>dolphinscheduler-api</artifactId>-->
+<!--            <version>dev-SNAPSHOT</version>-->
+<!--        </dependency>-->
     </dependencies>
 </project>
