--- a/deploy/kubernetes/dolphinscheduler/templates/secret-external-etcd-ssl.yaml
+++ b/deploy/kubernetes/dolphinscheduler/templates/secret-external-etcd-ssl.yaml
@@ -14,7 +14,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
-{{- if .Values.etcd.enabled }}
+{{- if .Values.etcd.ssl.enabled }}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -24,7 +24,7 @@ metadata:
     {{- include "dolphinscheduler.common.labels" . | nindent 4 }}
 type: Opaque
 data:
-  cert-file: {{ .Files.Get .Values.etcd.certFile | b64enc | quote }}
-  key-cert-chain-file: {{ .Files.Get .Values.etcd.keyCertChainFile | b64enc | quote }}
-  key-file: {{ .Files.Get .Values.etcd.keyFile | b64enc | quote }}
+  cert-file: {{ .Files.Get .Values.etcd.ssl.certFile | b64enc | quote }}
+  key-cert-chain-file: {{ .Files.Get .Values.etcd.ssl.keyCertChainFile | b64enc | quote }}
+  key-file: {{ .Files.Get .Values.etcd.ssl.keyFile | b64enc | quote }}
 {{- end }}
