--- a/dolphinscheduler-api/src/main/resources/task-type-config.yaml
+++ b/dolphinscheduler-api/src/main/resources/task-type-config.yaml
@@ -40,6 +40,7 @@ task:
     - 'DEPENDENT'
     - 'CONDITIONS'
     - 'SWITCH'
+    - 'DYNAMIC'
   dataIntegration:
     - 'SEATUNNEL'
     - 'DATAX'
