--- a/dolphinscheduler-datasource-plugin/pom.xml
+++ b/dolphinscheduler-datasource-plugin/pom.xml
@@ -50,6 +50,7 @@
         <module>dolphinscheduler-datasource-ssh</module>
         <module>dolphinscheduler-datasource-databend</module>
         <module>dolphinscheduler-datasource-snowflake</module>
+        <module>dolphinscheduler-datasource-vertica</module>
     </modules>
 
     <dependencyManagement>
