--- a/dolphinscheduler-storage-plugin/dolphinscheduler-storage-abs/pom.xml
+++ b/dolphinscheduler-storage-plugin/dolphinscheduler-storage-abs/pom.xml
@@ -20,32 +20,28 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.apache.dolphinscheduler</groupId>
-        <artifactId>dolphinscheduler</artifactId>
+        <artifactId>dolphinscheduler-storage-plugin</artifactId>
         <version>dev-SNAPSHOT</version>
     </parent>
 
-    <artifactId>dolphinscheduler-storage-plugin</artifactId>
-    <packaging>pom</packaging>
+    <artifactId>dolphinscheduler-storage-abs</artifactId>
 
-    <modules>
-        <module>dolphinscheduler-storage-api</module>
-        <module>dolphinscheduler-storage-all</module>
-        <module>dolphinscheduler-storage-s3</module>
-        <module>dolphinscheduler-storage-hdfs</module>
-        <module>dolphinscheduler-storage-oss</module>
-        <module>dolphinscheduler-storage-gcs</module>
-        <module>dolphinscheduler-storage-abs</module>
-    </modules>
+    <dependencies>
+        <dependency>
+            <groupId>com.azure</groupId>
+            <artifactId>azure-storage-blob</artifactId>
+        </dependency>
 
-    <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>org.apache.dolphinscheduler</groupId>
-                <artifactId>dolphinscheduler-bom</artifactId>
-                <version>${project.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
+        <dependency>
+            <groupId>org.apache.dolphinscheduler</groupId>
+            <artifactId>dolphinscheduler-storage-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.dolphinscheduler</groupId>
+            <artifactId>dolphinscheduler-task-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+    </dependencies>
 </project>
