--- a/dolphinscheduler-api/src/main/resources/application.yaml
+++ b/dolphinscheduler-api/src/main/resources/application.yaml
@@ -162,6 +162,14 @@ security:
         email-attribute: mail
         # action when ldap user is not exist (supported types: CREATE,DENY)
         not-exist-action: CREATE
+      ssl:
+        enable: false
+        # jks file path && password
+        # please store the jks file in dolphinscheduler-api/src/main/resources/ldapkeystore.jks
+        # if you run local, please change value to src/main/resources/ldapkeystore.jks
+        # if you run in service, please change value to ldapkeystore.jks
+        trust-store: "ldapkeystore.jks"
+        trust-store-password: "password"
 
 # Traffic control, if you turn on this config, the maximum number of request/s will be limited.
 # global max request number per second
