--- a/dolphinscheduler-api/src/main/resources/application.yaml
+++ b/dolphinscheduler-api/src/main/resources/application.yaml
@@ -164,8 +164,8 @@ security:
         not-exist-action: CREATE
       ssl:
         enable: false
-        # jks file path && password
-        trust-store: "ldapkeystore.jks"
+        # jks file absolute path && password
+        trust-store: "/ldapkeystore.jks"
         trust-store-password: "password"
 
 # Traffic control, if you turn on this config, the maximum number of request/s will be limited.
