--- a/deploy/kubernetes/dolphinscheduler/templates/secret-external-ldap-ssl.yaml
+++ b/deploy/kubernetes/dolphinscheduler/templates/secret-external-ldap-ssl.yaml
@@ -24,5 +24,5 @@ metadata:
     {{- include "dolphinscheduler.common.labels" . | nindent 4 }}
 type: Opaque
 data:
-  jks-file: {{ .Files.Get .Values.security.authentication.ldap.ssl.truststore | b64enc }}
+  jks-file: {{ .Values.security.authentication.ldap.ssl.jksbase64content | quote }}
 {{- end }}
