--- a/dolphinscheduler-aop/pom.xml
+++ b/dolphinscheduler-aop/pom.xml
@@ -54,6 +54,12 @@
         <dependency>
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-yarn-client</artifactId>
+            <exclusions>
+                <exclusion>
+                    <artifactId>okhttp</artifactId>
+                    <groupId>com.squareup.okhttp</groupId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <dependency>
