Add bom in dolphinscheduler-datasource-databend

--- a/dolphinscheduler-datasource-plugin/dolphinscheduler-datasource-databend/pom.xml
+++ b/dolphinscheduler-datasource-plugin/dolphinscheduler-datasource-databend/pom.xml
@@ -28,6 +28,18 @@
     <packaging>jar</packaging>
     <name>${project.artifactId}</name>
 
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.apache.dolphinscheduler</groupId>
+                <artifactId>dolphinscheduler-bom</artifactId>
+                <version>${project.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
     <dependencies>
         <dependency>
             <groupId>org.apache.dolphinscheduler</groupId>
