--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,8 @@
         <docker.build.skip>true</docker.build.skip>
         <docker.push.skip>true</docker.push.skip>
         <skipDepCheck>true</skipDepCheck>
+        <build.ui.skip>false</build.ui.skip>
+        <spotless.skip>false</spotless.skip>
     </properties>
 
     <dependencyManagement>
@@ -604,6 +606,7 @@
                 <artifactId>spotless-maven-plugin</artifactId>
                 <version>${spotless.version}</version>
                 <configuration>
+                    <skip>${spotless.skip}</skip>
                     <java>
                         <eclipse>
                             <file>style/spotless_dolphinscheduler_formatter.xml</file>
