k8s support jdbc registryt

--- a/deploy/kubernetes/dolphinscheduler/templates/secret-external-database.yaml
+++ b/deploy/kubernetes/dolphinscheduler/templates/secret-external-database.yaml
@@ -25,4 +25,7 @@ metadata:
 type: Opaque
 data:
   database-password: {{ .Values.externalDatabase.password | b64enc | quote }}
+  {{- if .Values.registryJdbc.hikariConfig.username }}
+  registry-password: {{ .Values.registryJdbc.hikariConfig.password | b64enc | quote }}
+  {{- end }}
 {{- end }}
