--- a/deploy/kubernetes/dolphinscheduler/values.yaml
+++ b/deploy/kubernetes/dolphinscheduler/values.yaml
@@ -94,7 +94,7 @@ zookeeper:
     size: "20Gi"
     storageClass: "-"
 
-etcd:
+registryEtcd:
   enabled: false
   endpoints: ""
   namespace: "dolphinscheduler"
@@ -108,6 +108,20 @@ etcd:
     keyCertChainFile: "etcd-certs/client.crt"
     keyFile: "etcd-certs/client.pem"
 
+registryJdbc:
+  enabled: false
+  termRefreshInterval: 2s
+  termExpireTimes: 3
+  # Default use same Dolphinscheduler's database if you don't change below config
+  hikariConfig:
+    driverClassName: com.mysql.cj.jdbc.Driver
+    jdbcurl: jdbc:mysql://
+    username: ""
+    password: ""
+    maximumPoolSize: 5
+    connectionTimeout: 9000
+    idleTimeout: 600000
+
 ## If exists external registry and set zookeeper.enable value to false, the external registry will be used.
 externalRegistry:
   registryPluginName: "zookeeper"
@@ -115,7 +129,9 @@ externalRegistry:
 
 security:
   authentication:
+    # Authentication types (supported types: PASSWORD,LDAP,CASDOOR_SSO)
     type: PASSWORD
+    # IF you set type `LDAP`, below config will be effective
     ldap:
       urls: ldap://ldap.forumsys.com:389/
       basedn: dc=example,dc=com
