support for zeppelin connections in the connection center and external connections in zeppelin tasks

--- a/dolphinscheduler-datasource-plugin/dolphinscheduler-datasource-all/pom.xml
+++ b/dolphinscheduler-datasource-plugin/dolphinscheduler-datasource-all/pom.xml
@@ -117,5 +117,10 @@
             <artifactId>dolphinscheduler-datasource-kyuubi</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.dolphinscheduler</groupId>
+            <artifactId>dolphinscheduler-datasource-zeppelin</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 </project>
