dataSource hana  pom.xml pull

--- a/dolphinscheduler-datasource-plugin/pom.xml
+++ b/dolphinscheduler-datasource-plugin/pom.xml
@@ -51,6 +51,7 @@
         <module>dolphinscheduler-datasource-databend</module>
         <module>dolphinscheduler-datasource-snowflake</module>
         <module>dolphinscheduler-datasource-vertica</module>
+        <module>dolphinscheduler-datasource-hana</module>
     </modules>
 
     <dependencyManagement>
